# simdjson-rs-schema

./: .gitconfig  Cargo.toml  LICENSE  README.md
src/: error.rs  helpers.rs  lib.rs  schema.rs  scope.rs
src/keywords/: const_.rs  contains.rs  dependencies.rs  enum_.rs  format.rs  items.rs  maxmin.rs  maxmin_items.rs  maxmin_length.rs  maxmin_properties.rs  mod.rs  multiple_of.rs  not.rs  of.rs  pattern.rs  properties.rs  property_names.rs  ref_.rs  required.rs  type_.rs  unique_items.rs
src/validators/: const_.rs  contains.rs  dependencies.rs  enum_.rs  formats.rs  items.rs  maxmin.rs  maxmin_items.rs  maxmin_length.rs  maxmin_properties.rs  mod.rs  multiple_of.rs  not.rs  of.rs  pattern.rs  properties.rs  property_names.rs  ref_.rs  required.rs  type_.rs  unique_items.rs
